# rag-eval-harness

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
examples/: quickstart.py  sample_dataset.json  sample_docs.json
rag_eval/: __init__.py  cli.py
rag_eval/api/: __init__.py  app.py
rag_eval/backends/: __init__.py  base.py  chromadb_backend.py  faiss_backend.py  qdrant_backend.py  weaviate_backend.py
rag_eval/llm/: __init__.py  claude.py
rag_eval/metrics/: __init__.py  generation.py  hallucination.py  retrieval.py
rag_eval/pipeline/: __init__.py  dataset.py  evaluator.py
services/api_gateway/: __init__.py  app.py
services/dataset_manager/: __init__.py  manager.py
services/generation_evaluator/: __init__.py  evaluator.py
services/model_runner/: __init__.py  runner.py
services/retrieval_evaluator/: __init__.py  evaluator.py
shared/cost/: __init__.py  estimator.py
shared/logging/: __init__.py  logger.py
shared/schemas/: __init__.py  models.py
tests/: test_api.py  test_api_gateway.py  test_claude_llm.py  test_dataset_manager.py  test_evaluator.py  test_faiss_backend.py  test_generation_evaluator_service.py  test_generation_metrics.py  test_hallucination.py  test_model_runner.py  test_retrieval_evaluator_service.py  test_retrieval_metrics.py  test_shared_cost.py  test_shared_logging.py  test_shared_schemas.py
